feat: implement discount management API and related services, update Pedido and Entregador models for enhanced functionality